force-app/main/default/objects/System_Log__c/fields/Code_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Code_Identifier__c</fullName>
    <description>identifier that can to used to indicate or locate the code that caused this logging item.</description>
    <label>Code Identifier</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>