force-app/main/default/objects/System_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description of what this record is referring to</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>