force-app/main/default/objects/System_Log__c/fields/Extended_Information__c.field-meta.xml
<CustomField>
    <fullName>Extended_Information__c</fullName>
    <description>Optional field to store any extra information. For example, error stacks or serialized data</description>
    <label>Extended Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>