force-app/main/default/objects/System_Log__c/fields/Log_Item_Source__c.field-meta.xml
<CustomField>
    <fullName>Log_Item_Source__c</fullName>
    <description>Indicates where the System Log record originated from (inserted from)</description>
    <label>Log Item Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>