force-app/main/default/objects/System_Log__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <description>User that the logging process was running under. For VisualForce pages this may be the logged in user. For system processes, this may be a different value (for example, product2Job for a product2 synch job).</description>
    <label>Logged In User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>