force-app/main/default/objects/System_Log__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <defaultValue>&quot;n/a&quot;</defaultValue>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>