force-app/main/default/objects/System_Log__c/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <inlineHelpText>SObject API Name (e.g. Account, Opportunity, Asset_Ownership__c)</inlineHelpText>
    <label>SObject API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>