force-app/main/default/objects/System_Log__c/fields/SObject_ID__c.field-meta.xml
<CustomField>
    <fullName>SObject_ID__c</fullName>
    <inlineHelpText>SF ID of the base SObject</inlineHelpText>
    <label>SObject ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>