force-app/main/default/objects/System_Log__c/fields/SObject_Link__c.field-meta.xml
<CustomField>
    <fullName>SObject_Link__c</fullName>
    <formula>IF(OR(ISBLANK(SObject_ID__c),LEN(SObject_ID__c)&lt;15,LEN(SObject_ID__c)&gt;18)
, &quot;&quot;
, HYPERLINK(&apos;/&apos; &amp; SObject_ID__c, TRIM( SObject_ID__c &amp; &quot;  &quot; &amp; SObject_API_Name__c),&quot;_blank&quot;)  
)</formula>
    <label>SObject Link</label>
    <type>Text</type>
</CustomField>