force-app/main/default/objects/System_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Logged_In_User__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Extended_Information__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>