force-app/main/default/objects/System_Log__c/listViews/Date.listView-meta.xml
<ListView>
    <fullName>Date</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/28/2018 12:00 AM</value>
    </filters>
    <label>Date</label>
    <language>en_US</language>
</ListView>