force-app/main/default/objects/System_Log__c/listViews/DateAll_no_string_consumer.listView-meta.xml
<ListView>
    <fullName>DateAll_no_string_consumer</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Description__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/30/2020 11:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>6/30/2020 11:00 PM</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>notContain</operation>
        <value>consumer</value>
    </filters>
    <label>All - Filter by Specific Date-NoConsumer</label>
    <language>en_US</language>
</ListView>