force-app/main/default/objects/System_Log__c/listViews/df_filter.listView-meta.xml
<ListView>
    <fullName>df_filter</fullName>
    <columns>Resolution_Status__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>D0124288P1</value>
    </filters>
    <label>DF / Filter logs by DF Order Number</label>
    <language>en_US</language>
</ListView>