force-app/main/default/objects/System_Log__c/listViews/df_filter_date_range_ordercreation.listView-meta.xml
<ListView>
    <fullName>df_filter_date_range_ordercreation</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Resolution_Status__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Log_Item_Source__c</field>
        <operation>startsWith</operation>
        <value>Consumer</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/30/2020 11:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2020 11:00 PM</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>/consumer-ordering/v1/consumer-order</value>
    </filters>
    <label>DF / Filter logs by Date Range ORDERS</label>
    <language>en_US</language>
</ListView>