force-app/main/default/objects/System_Log__c/listViews/DF_Filter_logs_by_SF_User_Name.listView-meta.xml
<ListView>
    <fullName>DF_Filter_logs_by_SF_User_Name</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>Resolution_Status__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Log_Item_Source__c</field>
        <operation>startsWith</operation>
        <value>Consumer</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/3/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Brian F</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>CVogt</value>
    </filters>
    <label>DF / Filter logs by SF User Name</label>
    <language>en_US</language>
</ListView>