force-app/main/default/objects/System_Log__c/listViews/df_filter_orders_date_range.listView-meta.xml
<ListView>
    <fullName>df_filter_orders_date_range</fullName>
    <columns>Resolution_Status__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>/consumer-ordering/v1/consumer</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/20/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>3/30/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Code_Identifier__c</field>
        <operation>contains</operation>
        <value>request</value>
    </filters>
    <label>DF / Filter Order Logs by Date Range</label>
    <language>en_US</language>
</ListView>