force-app/main/default/objects/System_Log__c/listViews/df_outbound_closeDFOrder.listView-meta.xml
<ListView>
    <fullName>df_outbound_closeDFOrder</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>Resolution_Status__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Identifier__c</field>
        <operation>startsWith</operation>
        <value>closeServiceCall</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:120</value>
    </filters>
    <label>DF / outbound completeDFOrder callout</label>
    <language>en_US</language>
</ListView>