force-app/main/default/objects/System_Log__c/listViews/DocuSign_FIlter.listView-meta.xml
<ListView>
    <fullName>DocuSign_FIlter</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Extended_Information__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Logged_In_User__c</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/7/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>Log_Item_Source__c</field>
        <operation>equals</operation>
        <value>ESG_BulkSendDocsManagerCtl</value>
    </filters>
    <label>DocuSign - Filter By Date</label>
    <language>en_US</language>
</ListView>