force-app/main/default/objects/System_Log__c/listViews/DVL_Krampus_Audit_Verify_Pinger.listView-meta.xml
<ListView>
    <fullName>DVL_Krampus_Audit_Verify_Pinger</fullName>
    <columns>NAME</columns>
    <columns>Log_Item_Source__c</columns>
    <columns>Code_Identifier__c</columns>
    <columns>Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Extended_Information__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>Log_Item_Source__c</field>
        <operation>equals</operation>
        <value>DVL_KrampusEvery15Batch</value>
    </filters>
    <filters>
        <field>Code_Identifier__c</field>
        <operation>contains</operation>
        <value>E15Rule001</value>
    </filters>
    <label>DVL_Krampus Audit - verify pinger</label>
    <language>en_US</language>
</ListView>